<resources>
    <string name="userLocationFirebasse">users/</string>
    <string name="app_name">Meal sharing app</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me </string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Fix </string>
    <string name="sign_in_slogan">Conquering On-campus Starvation</string>
    <string name="sign_in_gmail">Sign in via Google to Proceed</string>
    <string name="sign_in">MealShare</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="welcome_txt">Welcome to MealShare!</string>
    <string name="lookbutton_txt">Look for a Meal</string>
    <string name="request_number">\# of swipes I\'m looking for:</string>
    <string name="drop_down_prompt">(Select from the drop-down below)</string>
    <string name="pick_time_prompt">I\'m looking for a swipe at:</string>
    <string name="sharebutton_txt">Share a Meal</string>
    <string name="welcome2_txt">What would you like to do?</string>
    <string name="share_start">I\'m offering meal swipes from:</string>
    <string name="share_end">Until:</string>
    <string name="noteslabel">Notes:</string>
    <string name="share_label">\# of swipes I\'m offering:</string>
    <string name="sharelocation_label">I\'m sharing swipes at:</string>
    <string name="postbutton">Share</string>
    <string name="emdash">—</string>
    <string name="times">Offering time between:</string>
    <string name="mealShareSuccess">Thank you for ending hunger!</string>
    <string name="share_meal_view_button">View My Posts</string>
    <string name="share_meal_make_post">Make a Meal Share Post</string>
    <string name="find_meal_button">Find meals</string>
    <string name="find_meal_map_button">Map</string>
    <string name="view_request_button">View Requests</string>
    <string-array name="meals_amount">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_location_sharing_maps">Find nearby sharers!</string>
</resources>
